Include viewport-width client hint on main frame navigations on desktop

Bug: 821974
Change-Id: Icceeabb2e31c702341d898193f5ad6870b2d3f1e
Reviewed-on: https://chromium-review.googlesource.com/967095
Commit-Queue: Tarun Bansal <tbansal@chromium.org>
Reviewed-by: Ryan Sturm <ryansturm@chromium.org>
Cr-Commit-Position: refs/heads/master@{#543925}
Former-commit-id: 5c28afb44d6b24345d7f86c7947b8a8b17eb300f